# indent

./: ChangeLog  Makefile.am  NEWS  README.md  bootstrap  configure.ac
doc/: indent.texi
m4/: UTIMBUF.m4
man/: indent.1
po/: LINGUAS  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  id.po  indent.pot  it.po  ja.po  ka.po  ko.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
regression/: TEST
regression/input/: comment-heap-overread.c  comment-heap-overwrite.c  comment-parent-heap-underread.c
regression/standard/: comment-heap-overread.c  comment-heap-overwrite.c  comment-heap-overwrite.err  comment-parent-heap-underread.c
src/: Makefile.am  args.c  handletoken.c  indent.c  indent.h  output.c
